fix ticket serializer + ui Dashboard fixing
