# backend/services/serializer.py
@@ -8,7 +8,7 @@ from django.contrib.auth.models import Group, User
 ################# AUTH ######################
 
 class GroupSerializer(serializers.ModelSerializer):
-    id = serializers.IntegerField()
+    id = serializers.IntegerField(required=False)
 
     class Meta:
         model = Group
@@ -20,10 +20,14 @@ class GroupSerializer(serializers.ModelSerializer):
 
 class UserSerializer(serializers.ModelSerializer):
     groups = GroupSerializer(many=True)
+    id = serializers.IntegerField(required=False)
 
     class Meta:
         model = User
         fields = '__all__'
+        extra_kwargs = {
+            'username': {'validators': []},
+        }
 
     def create(self, validated_data):
         password_data = validated_data.pop('password')
@@ -41,14 +45,22 @@ class UserSerializer(serializers.ModelSerializer):
 
 
 class CommentSerializer(serializers.ModelSerializer):
+    creator = UserSerializer()
+    ticket = serializers.SerializerMethodField()
+    id = serializers.IntegerField(required=False)
+
     class Meta:
         model = Comment
         fields = '__all__'
+
+    def get_ticket(self, obj):
+        return TicketSerializer(obj.ticket).data
 
 
 class TopicSerializer(serializers.ModelSerializer):
     users = UserSerializer(many=True, read_only=True)
     group = GroupSerializer()
+    id = serializers.IntegerField(required=False)
 
     class Meta:
         model = Topic
@@ -62,13 +74,40 @@ class TopicSerializer(serializers.ModelSerializer):
 
 
 class TicketSerializer(serializers.ModelSerializer):
+    id = serializers.IntegerField(required=False)
     groups = GroupSerializer(many=True)
     receivers = UserSerializer(many=True)
     topics = TopicSerializer(many=True)
-    comments = CommentSerializer(many=True)
+    comments = CommentSerializer(many=True, required=False)
     creator = UserSerializer()
     last_updated_by = UserSerializer()
 
     class Meta:
         model = Ticket
         fields = '__all__'
+
+    def create(self, validated_data):
+        creator = validated_data.pop('creator')
+        last_updated_by = validated_data.pop('last_updated_by')
+        groups = validated_data.pop('groups')
+        topics = validated_data.pop('topics')
+        receivers = validated_data.pop('receivers')
+        creator_obj = User.objects.get(pk=creator['id'])
+        last_updated_by_obj = User.objects.get(pk=last_updated_by['id'])
+
+        ticket = Ticket.objects.create(
+            creator=creator_obj, last_updated_by=last_updated_by_obj, ** validated_data)
+
+        for group in groups:
+            groups_obj = Group.objects.get(pk=group['id'])
+            ticket.groups.add(groups_obj)
+
+        for topic in topics:
+            topics_obj = Topic.objects.get(pk=topic['id'])
+            ticket.topics.add(topics_obj)
+
+        for receiver in receivers:
+            receivers_obj = User.objects.get(pk=receiver['id'])
+            ticket.receivers.add(receivers_obj)
+
+        return ticket
